add DTO, mappers, Controler, working swagger